static style changes

--- a/my_portfolio/src/App.css
+++ b/my_portfolio/src/App.css
@@ -1,45 +1,51 @@
+/** @format */
+
 .App {
-	text-align: center;
-	border: 1px solid black;
-	overflow: hidden;
+  text-align: center;
+  border: 1px solid black;
+  overflow: hidden;
 }
 
 .App-logo {
-	animation: App-logo-spin infinite 20s linear;
-	height: 40vmin;
-	pointer-events: none;
+  animation: App-logo-spin infinite 20s linear;
+  height: 40vmin;
+  pointer-events: none;
 }
 
 .App-header {
-	background-color: #282c34;
-	min-height: 100vh;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	justify-content: center;
-	font-size: calc(10px + 2vmin);
-	color: white;
+  background-color: #282c34;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
 }
 
 .App-link {
-	color: #61dafb;
+  color: #61dafb;
 }
 
 @keyframes App-logo-spin {
-	from {
-		transform: rotate(0deg);
-	}
-	to {
-		transform: rotate(360deg);
-	}
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
 }
 
 a {
-	color: #dc3545;
-	font-family: "Open Sans Condensed";
-	letter-spacing: 2px;
-	font-weight: bold;
+  color: #dc3545;
+  font-family: "Open Sans Condensed";
+  letter-spacing: 2px;
+  font-weight: bold;
 }
 a:hover {
-	color: #007bff;
+  color: #007bff;
+}
+
+.card {
+  border: none;
 }
